// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor base demo works fine 1`] = `
<div
  style="display: flex;"
>
  <div
    style="flex: 1;"
  />
   
  <div>
    <div
      class="t-anchor t-size-m"
    >
      <div
        class="t-anchor__line"
      >
        <div
          class="t-anchor__line-cursor-wrapper"
        >
          <div
            class="t-anchor__line-cursor"
          />
        </div>
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#基础锚点"
          target="_self"
          title="基础锚点"
        >
          基础锚点
        </a>
      </div>
       
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#多级锚点"
          target="_self"
          title="多级锚点"
        >
          多级锚点
        </a>
      </div>
       
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#指定容器锚点"
          target="_self"
          title="指定容器锚点"
        >
          指定容器锚点
        </a>
      </div>
       
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#特定交互锚点"
          target="_self"
          title="特定交互锚点"
        >
          特定交互锚点
        </a>
      </div>
       
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="#尺寸"
          target="_self"
          title="尺寸"
        >
          尺寸
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Anchor bounds demo works fine 1`] = `
<div
  class="anchor-demo"
>
  <div
    class="t-anchor t-size-m"
  >
    <div
      class="t-anchor__line"
    >
      <div
        class="t-anchor__line-cursor-wrapper"
      >
        <div
          class="t-anchor__line-cursor"
        />
      </div>
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="#基础锚点"
        target="_self"
        title="基础锚点"
      >
        基础锚点
      </a>
    </div>
     
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="#多级锚点"
        target="_self"
        title="多级锚点"
      >
        多级锚点
      </a>
    </div>
     
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="#指定容器锚点"
        target="_self"
        title="指定容器锚点"
      >
        指定容器锚点
      </a>
    </div>
     
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="#特定交互锚点"
        target="_self"
        title="特定交互锚点"
      >
        特定交互锚点
      </a>
    </div>
     
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="#尺寸"
        target="_self"
        title="尺寸"
      >
        尺寸
      </a>
    </div>
  </div>
</div>
`;

exports[`Anchor target demo works fine 1`] = `
<div
  class="anchor-demo"
>
  <div
    class="t-anchor__target"
    id="http://example.com#anchor-target-1"
  >
    定义
    <div
      class="t-popup-reference t-anchor__copy"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      >
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup-content t-popup-content--arrow"
            style="max-width: 480px;"
          >
            复制链接
            <div
              class="t-popup__arrow"
            />
          </div>
        </div>
      </transition-stub>
      <svg
        class="t-icon t-icon-file-copy"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-anchor__target"
    id="http://example.com#anchor-target-2"
  >
    服务功能
    <div
      class="t-popup-reference t-anchor__copy"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      >
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup-content t-popup-content--arrow"
            style="max-width: 480px;"
          >
            复制链接
            <div
              class="t-popup__arrow"
            />
          </div>
        </div>
      </transition-stub>
      <svg
        class="t-icon t-icon-file-copy"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-anchor__target"
    id="http://example.com#anchor-target-3"
  >
    使用指南
    <div
      class="t-popup-reference t-anchor__copy"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      >
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup-content t-popup-content--arrow"
            style="max-width: 480px;"
          >
            复制链接
            <div
              class="t-popup__arrow"
            />
          </div>
        </div>
      </transition-stub>
      <svg
        class="t-icon t-icon-file-copy"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-anchor__target"
    id="http://example.com#anchor-target-4"
  >
    创建签名
    <div
      class="t-popup-reference t-anchor__copy"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      >
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup-content t-popup-content--arrow"
            style="max-width: 480px;"
          >
            复制链接
            <div
              class="t-popup__arrow"
            />
          </div>
        </div>
      </transition-stub>
      <svg
        class="t-icon t-icon-file-copy"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-anchor__target"
    id="http://example.com#anchor-target-5"
  >
    创建内容
    <div
      class="t-popup-reference t-anchor__copy"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      >
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup-content t-popup-content--arrow"
            style="max-width: 480px;"
          >
            复制链接
            <div
              class="t-popup__arrow"
            />
          </div>
        </div>
      </transition-stub>
      <svg
        class="t-icon t-icon-file-copy"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-anchor__target"
    id="http://example.com#anchor-target-6"
  >
    保密协议
    <div
      class="t-popup-reference t-anchor__copy"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      >
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup-content t-popup-content--arrow"
            style="max-width: 480px;"
          >
            复制链接
            <div
              class="t-popup__arrow"
            />
          </div>
        </div>
      </transition-stub>
      <svg
        class="t-icon t-icon-file-copy"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-anchor__target"
    id="http://example.com#anchor-target-7"
  >
    其他
    <div
      class="t-popup-reference t-anchor__copy"
    >
      <transition-stub
        appear="true"
        name="t-popup_animation"
      >
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup-content t-popup-content--arrow"
            style="max-width: 480px;"
          >
            复制链接
            <div
              class="t-popup__arrow"
            />
          </div>
        </div>
      </transition-stub>
      <svg
        class="t-icon t-icon-file-copy"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</div>
`;
